# ejercicio-preparcial-Sebitas1201

./: CMakeLists.txt  README.md  ejercicio1.cpp  ejercicio1.h  ejercicio2.cpp  ejercicio2.h  ejercicio3.cpp  ejercicio3.h  ejercicio4.cpp  ejercicio4.h  ejercicio5.cpp  ejercicio5.h  ejercicio6.cpp  ejercicio6.h  main.cpp
