cmake_minimum_required(VERSION 4.0)
project(ProyectoP)

set(CMAKE_CXX_STANDARD 20)

add_executable(ProyectoP main.cpp
        ejercicio1.cpp
        ejercicio1.h
        ejercicio2.cpp
        ejercicio2.h
        ejercicio3.cpp
        ejercicio3.h
        ejercicio4.cpp
        ejercicio4.h
        ejercicio5.cpp
        ejercicio5.h
        ejercicio6.cpp
        ejercicio6.h)
